kubernetes/django-portfolio.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-django
  labels:
    app: api-django
spec:
  replicas: 3
  selector:
    matchLabels:
      app: api-django
  template:
    metadata:
      labels:
        app: api-django
    spec:
      imagePullSecrets:
        - name: ecr-docker-login-token-from-action
      containers:
        - name: api-django
          image: dkr.ecr.us-east-2.amazonaws.com/portfolio-django:068335443
          imagePullPolicy: Always
          ports:
            - name: apiweb
              containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: api-django-clusterip
spec:
  type: ClusterIP
  ports:
    - targetPort: 8000
      port: 80
  selector:
    app: api-django
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-django-ingress
  annotations:
    kubernetes.io/ingress.class: 'nginx'
spec:
  # ingressClassName: nginx
  defaultBackend:
    service:
      name: api-django-clusterip
      port:
        number: 80
  tls:
    - hosts:
        - django.ferozfaiz.com
      secretName: ferozfaiz-com-cloudflare-tls
  rules:
    - host: django.ferozfaiz.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-django-clusterip
                port:
                  number: 80
