kubernetes/reactjs-portfolio.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-reactjs
  labels:
    app: web-reactjs
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web-reactjs
  template:
    metadata:
      labels:
        app: web-reactjs
    spec:
      imagePullSecrets:
        - name: ecr-docker-login-token-from-action
      containers:
        - name: web-reactjs
          image: dkr.ecr.us-east-2.amazonaws.com/portfolio-reactjs:820935581
          imagePullPolicy: Always
          ports:
            - name: web-reactjs
              containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: web-reactjs-clusterip
spec:
  type: ClusterIP
  ports:
    - targetPort: 80
      port: 80
  selector:
    app: web-reactjs
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-reactjs-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: web-reactjs-clusterip
      port:
        number: 80
  tls:
    - hosts:
        - reactjs.ferozfaiz.com
      secretName: ferozfaiz-com-cloudflare-tls
  rules:
    - host: reactjs.ferozfaiz.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-reactjs-clusterip
                port:
                  number: 80
